--- a/HMS/HMS/Admin.resx
+++ b/HMS/HMS/Admin.resx
@@ -132,11 +132,14 @@
   <metadata name="contextMenuStrip5.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>637, 17</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABhwAAAVZCAYAAACXFaGvAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAy
-        uQAAMrkB+rTEbQAA/7JJREFUeF7s/fm3LWld5/ue/+D+cv+Dcow7biNYR8tTpZa177HKrFQUG8QGq+oo
+        tgAAMrYBjHpqdwAA/7JJREFUeF7s/fm3LWld5/ue/+D+cv+Dcow7biNYR8tTpZa177HKrFQUG8QGq+oo
         ioJKkqIiIttUkCTpEkggQZC+URLYJElrKhtIUkgak9YkSRCxO1UnKcXCY5f3sO56VkasPdfc37lWxIwn
         Ip4n4vUe4z2UnXPNGbOJmBHfz/x+n/8JAAAAAAAAw7jtrvvOtb73rn+6Jvm+u//54qa33X3fwWlu3769
         n2S63+ahABTOwYWrzh1cuPqar9589cXkwc0/f7Dp8b8f3ibdtvmzKvmHe2479w9333bNP372/RePvOf9
